feat: introduce new gc options